@@ -379,6 +379,8 @@ inlead,	   0x5C3510,	0x5D2140,	0x5C3220,	"Unit_check_bombard_target",			"byte (_
 inlead,	   0x5C5160,	0x5D3E40,	0x5C4E70,	"Unit_can_disembark_anything",			"byte (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y)"
 repl call, 0x57F627,	0x58C356,	0x57F387,	"get_tile_occupier_for_ai_path",		""
 repl call, 0x56D9D1,	0x57A3C2,	0x56D941,	"Unit_is_tile_occupier_visible",		""
+repl call, 0x550F99,	0x55C0E1,	0x550F49,	"Unit_can_do_worker_command_for_button_setup",	""
+repl call, 0x55132D,	0x55C484,	0x5512DD,	"Unit_can_do_worker_command_for_button_setup",	""
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
