@@ -918,6 +918,7 @@ ENTRY_POINT ()
 	write_prog_int (&injected_state->sc_img_state, IS_UNINITED);
 	write_prog_int (&injected_state->tile_highlight_state, IS_UNINITED);
 	write_prog_int (&injected_state->mod_info_button_images_state, IS_UNINITED);
+	write_prog_int (&injected_state->disabled_command_img_state, IS_UNINITED);
 	tcc_define_pointer (tcc, "ADDR_INJECTED_STATE", injected_state);
 
 	// Pass through prog objects before compiling to set things up for compilation
