@@ -1,6 +1,7 @@
 - Option to allow land units to bombard aircraft and naval units in cities
 - Disallow useless bombard attacks vs airfields
 - Fix freeze related to trespassing restriction and AI disembarking
+- Gray out build city button when too close to another city and min separation has been increased
 - Rework sub bug fix in order not to interfere with AI pathing vs enemy units
 - Mitigate issue with pathfinding, limited railroad movement, and units with many moves
   - Mitigation applies if GCD(road movement rate, railroad limit) > 1
